# EasyDemo

./: .gitignore  CMakeLists.txt  main.c
include/: elog.h  elog_cfg.h
